lib/src/platforms/shared/ffi/file_saver_ffi.h

void* file_saver_init(void);
// MARK: - User-Selected Location (Document Picker)

/// Pick a directory via system Document Picker.
///
/// Shows the system directory picker and returns the selected directory URI.
///
/// Messages sent to native_port:
/// - Success:    [3, directoryUri]
/// - Cancelled:  [4]
/// - Error:      [2, errorCode, errorMessage]
///
/// @param instance FileSaver instance from file_saver_init
/// @param native_port Dart NativePort for result reporting
void file_saver_pick_directory(
    void* instance,
    int64_t native_port
);
/// Save bytes to user-selected directory (saveAs).
///
/// Saves file bytes to a directory previously selected via file_saver_pick_directory.
///
/// Progress messages sent to native_port:
/// - Started:    [0]
/// - Progress:   [1, progress]    (progress is 0.0 to 1.0)
/// - Error:      [2, errorCode, errorMessage]
/// - Success:    [3, fileUri]
/// - Cancelled:  [4]
///
/// @param instance FileSaver instance from file_saver_init
/// @param fileData Byte array of file content
/// @param fileDataLength Length of fileData
/// @param directoryUri Directory URI from file_saver_pick_directory
/// @param baseFileName File name without extension
/// @param extension File extension without dot
/// @param conflictMode Conflict resolution mode (0-3)
/// @param native_port Dart NativePort for progress reporting
/// @return Token ID for cancellation
uint64_t file_saver_save_bytes_as(
    void* instance,
    const uint8_t* fileData,
    int64_t fileDataLength,
    const char* directoryUri,
    const char* baseFileName,
    const char* extension,
    int32_t conflictMode,
    int64_t native_port
);
/// Save file to user-selected directory (saveAs).
///
/// Copies a file to a directory previously selected via file_saver_pick_directory.
///
/// Progress messages sent to native_port:
/// - Started:    [0]
/// - Progress:   [1, progress]    (progress is 0.0 to 1.0)
/// - Error:      [2, errorCode, errorMessage]
/// - Success:    [3, fileUri]
/// - Cancelled:  [4]
///
/// @param instance FileSaver instance from file_saver_init
/// @param filePath Source file path (file:// URI)
/// @param directoryUri Directory URI from file_saver_pick_directory
/// @param baseFileName File name without extension
/// @param extension File extension without dot
/// @param conflictMode Conflict resolution mode (0-3)
/// @param native_port Dart NativePort for progress reporting
/// @return Token ID for cancellation
uint64_t file_saver_save_file_as(
    void* instance,
    const char* filePath,
    const char* directoryUri,
    const char* baseFileName,
    const char* extension,
    int32_t conflictMode,
    int64_t native_port
);
/// Save network file to user-selected directory (saveAs).
///
/// Downloads and saves a file to a directory previously selected via
/// file_saver_pick_directory.
///
/// Progress messages sent to native_port:
/// - Started:    [0]
/// - Progress:   [1, progress]    (progress is 0.0 to 1.0)
/// - Error:      [2, errorCode, errorMessage]
/// - Success:    [3, fileUri]
/// - Cancelled:  [4]
///
/// @param instance FileSaver instance from file_saver_init
/// @param urlString URL to download from
/// @param headersJson Optional JSON string of HTTP headers (can be NULL)
/// @param timeoutSeconds Timeout in seconds for network request
/// @param directoryUri Directory URI from file_saver_pick_directory
/// @param baseFileName File name without extension
/// @param extension File extension without dot
/// @param conflictMode Conflict resolution mode (0-3)
/// @param native_port Dart NativePort for progress reporting
/// @return Token ID for cancellation
uint64_t file_saver_save_network_as(
    void* instance,
    const char* urlString,
    const char* headersJson,
    int32_t timeoutSeconds,
    const char* directoryUri,
    const char* baseFileName,
    const char* extension,
    int32_t conflictMode,
    int64_t native_port
);